# math_parser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
.github/ISSUE_TEMPLATE/: feature_request.md
expression/: arithmetics.h  binary_expression.cpp  binary_expression.h  binary_operation.cpp  binary_operation.h  expression.h  expression_matrix.h  functions.h  unary_expression.cpp  unary_expression.h  unary_operation.cpp  unary_operation.h  utility.h  value.h
expression/arithmetics/: add.h  divide.h  multiply.h  negate.h  subtract.h
expression/functions/: exponent.h  exponential.h  hyperbolic.h  natural_logarithm.h  power.h  trigonometry.h
expression/functions/hyperbolic/: arcosine_h.h  arcotangent_h.h  arsine_h.h  artangent_h.h  cosine_h.h  cotangent_h.h  sine_h.h  tangent_h.h
expression/functions/trigonometry/: arccosine.h  arccotangent.h  arcsine.h  arctangent.h  cosine.h  cotangent.h  sine.h  tangent.h
expression/utility/: algorithm.h  calculator.h  calculators.h  cast.h  constant.h  definitions.cpp  definitions.h  expression_matrix.h  number.h  types.h  value.h  variable.h
expression/utility/calculator/: binary_calculator.h  equals_calculator.h  string_calculator.h  unary_calculator.h
expression/utility/types/: matrix.h
